# abcdYi

./: .env.example  .gitignore  ABCDYI_COMPREHENSIVE_AUDIT_REPORT.md  CHANGELOG.md  Dockerfile.api  GIRAFFE_JP_NEXT_BACKEND_ITERATIONS_REPORT.md  GLTG-AUDIT-2026-06-27.md  GPM_A_F_UNIFIED_DB_LLM_E2E_TEST_REPORT.md  GPM_COMPREHENSIVE_TEST_REPORT.md  GPM_SESSION_A_IMPLEMENTATION_REPORT.md  GPM_SESSION_B_IMPLEMENTATION_REPORT.md  GPM_SESSION_C_IMPLEMENTATION_REPORT.md  GPM_SESSION_D_IMPLEMENTATION_REPORT.md  GPM_SESSION_E_IMPLEMENTATION_REPORT.md  GPM_SESSION_F_IMPLEMENTATION_REPORT.md  LICENSE_NOTICE.md  MAIN_3X_VALIDATION_REPORT.md  MAIN_VALIDATION_AFTER_PR10.md  Makefile  PATENT_NOTICE.md  README.md  VALIDATION_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  run_apparel_v1_e2e.py
.github/: pull_request_template.md
alembic/: env.py
api/: auth.py  deps.py  main.py
docs/: BM_DB_INTEGRATION_BASELINE_v1.md  CLAUDE_MSIDE_MVP_ROLE_SWITCHING_AGENT.md  GPM_GIRAFFE_DB_CONTEXT_RETRIEVER.md  GPM_OPERATOR_API_SERVICE.md  GPM_PUBLIC_PRIVATE_DATA_MODE.md  Giraffe_Agent_MVP_v1.0_PRD.md  acceptance_criteria_v1.md  admin_manual.md  api_reference.md  deployment_guide.md  execution_graph.md  final_status_report.md  giraffe_jp_api_reference.md  giraffe_jp_service_backend.md  gltg-full-audit-2026-06-26.md  human_approval_policy.md  participant_roles.md  patent_alignment_matrix.md  product_scope.md  product_scope_v1.md  release_notes_v1.md  security_and_data_policy.md  small_order_quick_response.md  (+3 more)
libs/GLTG/: pyproject.toml
libs/GLTG/gltg/: __init__.py  engine.py  models.py
(+510 files in other folders)
