[project]
name = "gltg"
version = "0.1.0"
description = "GLTG — Giraffe Lead-Time Graph engine for delivery feasibility reasoning"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gltg"]
